<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >



    <TextView
            android:id="@+id/lblLoanAmount"
            android:text="@string/lblLoanAmount"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

    <EditText
            android:id="@+id/txtLoanAmount"
            android:hint="@string/txtLoanAmount"
            android:inputType="numberDecimal"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/lblLoanAmount"

            android:text="16190.99"
            />




    <TextView
            android:id="@+id/lblInterestRate"
            android:text="@string/lblInterestRate"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/txtLoanAmount"
            />

    <EditText
            android:id="@+id/txtInterestRate"
            android:hint="@string/txtInterestRate"
            android:inputType="numberDecimal"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/lblInterestRate"

            android:text="1.85"
            />





    <TextView
            android:id="@+id/lblNumberOfPayments"
            android:text="@string/lblNumberOfPayments"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/txtInterestRate"
            />

    <EditText
            android:id="@+id/txtNumberOfPayments"
            android:hint="@string/txtNumberOfPayments"
            android:inputType="numberDecimal"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/lblNumberOfPayments"

            android:text="48"
            />






    <Button
            android:id="@+id/cmd_calculate"
            android:text="@string/cmd_calculate"
            android:onClick="clickCalculate"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/txtNumberOfPayments"
            />


    <TextView
            android:id="@+id/lblMonthlyPayment"
            android:text="@string/lblMonthlyPayment"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/cmd_calculate"
            />
    <TextView
            android:id="@+id/lblTotalPrinciple"
            android:text="@string/lblTotalPrinciple"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/lblMonthlyPayment"
            />
    <TextView
            android:id="@+id/lblTotalInterest"
            android:text="@string/lblTotalInterest"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/lblTotalPrinciple"
            />
    <TextView
            android:id="@+id/lblTotalPaid"
            android:text="@string/lblTotalPaid"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/lblTotalInterest"
            />
    <TextView
            android:id="@+id/lblCompoundedInterest"
            android:text="@string/lblCompoundedInterest"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/lblTotalPaid"
            />


</RelativeLayout>